# sql-syntax-examples

./: README.md  postgresql.json  pyproject.toml
scrape_docs/: postgresql.csv  scrapy.cfg
scrape_docs/scrape_docs/: items.py  middlewares.py  pipelines.py  settings.py
scrape_docs/scrape_docs/spiders/: postgresql_spider.py
