[tool.poetry]
name = "sql-syntax-examples"
version = "0.1.0"
description = "SQL query syntax scraped from database docs, plus the scraper"
authors = ["Catherine Devlin <catherine.devlin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
bandit = "^1.7.4"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
